--- a/index.html
+++ b/index.html
@@ -49,12 +49,12 @@
     <section>
       <div class="container">
         <div class="row">
-          <div class="col-md-6 pt-5 ">
+          <div class="col-md-6 col-12 pt-5 ">
             <h1>Great Companies are built on great Products</h1>
             <h5 class="my-5">Ignite the most powerfull growth engine you have ever built for your company</h5>
             <button type="button" class="btn btn-primary but">Get started</button>
           </div>
-          <div class="col-md-6" >
+          <div class="col-md-6 col-12" >
             <img src="bg_image_1.png" alt="" class="mx-auto d-block p-5">
           </div>
         </div>
